notes-app/notes-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  labels:
    app: notes-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app-deployment
          image: pavansa/notes-app
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
