notes-app/notes-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-svc
spec:
  selector:
    app: notes-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
